--- a/static/css/style.css
+++ b/static/css/style.css
@@ -109,6 +109,8 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     overflow-x: hidden;
+    width: 100%;
+    min-width: 320px;
 }
 
 /* Subtle background texture */
